mywork/force-app/main/default/objects/Jenkins_Config__c/Jenkins_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Represents a configuration for a Jenkins CI build server.</description>
    <label>Jenkins Config</label>
</CustomObject>