mywork/force-app/main/default/objects/Jenkins_Config__c/fields/User_API_Token__c.field-meta.xml
<CustomField>
    <fullName>User_API_Token__c</fullName>
    <description>Represents a Jenkins CI user API token.</description>
    <label>User API Token</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>