mywork/force-app/main/default/objects/Jenkins_Config__c/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <description>Represents a Jenkins CI user ID.</description>
    <label>User ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>